# SuperAgentServer

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Makefile  Makefile.mk  PROJECT_SUMMARY.md  README.md  env.example  pyproject.toml  pytest.ini  requirements.txt  run.py  server.py  setup.py  test_server.py  test_websocket.py
.github/: ci.yaml
.github/workflows/: ci.yaml  docker-image.yml
adapters/: __init__.py  a2a_adapter.py  mcp_adapter.py  schema_generator.py  webhook_adapter.py
agent/: __init__.py  base_agent.py  example_agent.py
ai-reference/: spec.md
config/: env.example  logging.yaml  requirements-dev.txt
docker/: Dockerfile  docker-compose.prod.yml  docker-compose.yml
docs/: API_REFERENCE.md  DEPLOYMENT.md  README.md  USAGE_GUIDE.md  __init__.py
docs/ai-reference/: PROJECT_SUMMARY.md
docs/api/: README.md  rest-api.md
docs/deployment/: README.md  docker.md
docs/development/: README.md
docs/examples/: README.md
docs/examples/advanced-agent/: README.md
docs/examples/basic-agent/: README.md
docs/getting-started/: README.md  d_ProjStuff_SuperAgentServer_docs_examples_advanced-agent_README.md  first-agent.md  installation.md  quick-start.md
docs/reference/: README.md
docs/user-guide/: README.md  configuration.md
docs/user-guide/adapters/: a2a-adapter.md  (+1 more)
examples/: config_example.py
scripts/: README.md  dev_runner.py  telegram.md  telegram_setup.py  test_docker.py  test_structure.py  test_webhook_runner.py  test_websocket.py
src/examples/: __init__.py  config_example.py  simple_agent.py
src/super_agent_server/: __init__.py  config.py  dependencies.py  logging.py  server.py  utils.py
super_agent_server.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: __init__.py  conftest.py  test_integration.py  test_performance.py  test_security.py  test_server.py  test_websocket.py
tests/test_adapters/: __init__.py  test_a2a_adapter.py  test_acp_adapter.py  test_api_adapter.py  test_mcp_adapter.py  test_webhook_adapter.py
(+12 files in other folders)
